# a-client-library

./: CMakeLists.txt  CNAME  NEWS.md  NOTICE  README.md  _config.yml  aclientlibraryConfig.cmake.in
.changes/: 0.0.1.md
include/a-client-library/: aclient.h
src/: aclient.c
